tests/files/flow_controller_tests/should_run/067.cmdr
x = 3;
print sin(x);