tests/files/flow_controller_tests/should_fail/021.cmdr
x = true;
print sqrt(x);